tests/paczka2/big_fuzzy/89548453.err
Error in line 2: A508 A543 6U,9
Error in line 1: A508 A745 33,6
Error in line 8: A508 A543 86,9
Error in line 7: b45gjJIKg A327 48,1
Error in line 13: b45gjJIKg A508 29,3
Error in line 35: b45gjJIKg A745 86,2
Error in line 36: b45gjJIKg A508 44,0
Error in line 49: IvMlALJiDuY A508 42,1
Error in line 17: A508 A745 84,1
Error in line 66: A508 A543 60,3
Error in line 54: IvMlALJiDuY A327 100,0
Error in line 39: IExK8m A745 46,9
Error in line 85: lTf A745 87,0
Error in line 84: IExK8m A327 26,5
Error in line 92: otbeftv6uCX A327 38,1
Error in line 110: lTf A327 12,5
Error in line 119: cOMXzTF A745 369,77
Error in line 111: b45gjJIKg A745 16,2
Error in line 120: b45gjJIKg A327 63,1
Error in line 130: A508 A508 80,7
Error in line 135: A508 A327 40,2
Error in line 136: A508 A508 97,8
Error in line 137: A508 A327 47,9
Error in line 138: A508 A543 28,6
Error in line 134: cOMXzTF A508 359,4
Error in line 132: lTf A327 74,7
Error in line 133: otbeftv6uCX A508 55,2
Error in line 160: b45gjJIKg A745 112,4
Error in line 179: IvMlALJiDuY A543 47,2
Error in line 175: cOMXzTF A543 10,5
Error in line 185: cOMXzTF A508 90,9
Error in line 190: A508 A745 34,0
Error in line 191: lTf A543 74,0
Error in line 192: cOMXzTF A745 31,7
Error in line 217: b45gjJIKg A327 44,3
Error in line 207: cOMXzTF A327 18,0
Error in line 229: otbeftv6uCX A745 92,5
Error in line 231: otbeftv6uCX A508 67,7
Error in line 232: otbeftv6uCX A543 3,8
Error in line 239: IExK8m A508 98,7
Error in line 237: otbeftv6uCX A327 77,5
Error in line 246: otbeftv6uCX A745 62,5
